
Bug IDs that start with "K" can be found in the Kenai Bugzilla
(after removing the "K"):

	https://kenai.com/bugzilla/


		  CHANGES IN THE 1.4.6 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.6 release.

K  4906	IMAP Store socket leak on connect with ProtocolException
K  5086	STARTTLS when already using SSL may cause connection to fail


		  CHANGES IN THE 1.4.5 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.5 release.

7021190	MimeMessage.setRecipients(type, String) does not accept null address
K  3815	ArrayIndexOutOfBoundsException for some IMAP protocol errors
K  4002	MultipartReport.setReport and setDeliveryStatus are broken
K  4065	Wrong representation of CR/LF are appended to the attachment
K  4296	SSL Re-Negotiation Problem with checkserveridentity=true
K  4511	Thread safety in javax.mail.PasswordAuthentication
K  4583	Add SOCKS5 support
K  4753	wrong message accessed when another client expunges and adds messages
<no id>	properly handle timeouts during SSL negotiation
<no id>	free MIME headers in IMAPMessage.invalidateHeaders
<no id>	fix exception in POP3Message when reading file cached content twice
<no id>	suppress auth info in debug output, unless mail.debug.auth=true
<no id>	better handle timeouts from POP3 server, throwing FolderClosedException
<no id>	add com.sun.mail.util.ReadableMime to allow reading raw MIME data
<no id>	work around Gmail IMAP bug with nested messages
<no id>	close the SMTP connection if there's an I/O error


		  CHANGES IN THE 1.4.4 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.4 release.

5057742	javax.mail.internet.MimeMessage.addFrom() violates RFC2822
6778568	lower memory usage of POP3 parsing by buffering to disk
6905730	MimeMessage.parse() is very slow on malformed message content
6910675	IMAP provider can lose track of message sequence numbers