@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -58,7 +58,10 @@ public class IMAPResponse extends Response {
 
     public IMAPResponse(Protocol c) throws IOException, ProtocolException {
 	super(c);
+	init();
+    }
 
+    private void init() throws IOException, ProtocolException {
 	// continue parsing if this is an untagged response
 	if (isUnTagged() && !isOK() && !isNO() && !isBAD() && !isBYE()) {
 	    key = readAtom();
@@ -78,6 +81,14 @@ public class IMAPResponse extends Response {
 	super((Response)r);
 	key = r.key;
 	number = r.number;
+    }
+
+    /**
+     * For testing.
+     */
+    public IMAPResponse(String r) throws IOException, ProtocolException {
+	super(r);
+	init();
     }
 
     /**
